--- a/VehicleMVC/Project.MVC.csproj
+++ b/VehicleMVC/Project.MVC.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Pageing.cs" />
     <Compile Include="ViewModels\MakerViewModel.cs" />
     <Compile Include="ViewModels\ModelViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
